*Empty MediaWiki Message*

--- a/Ålkraie.mw
+++ b/Ålkraie.mw
@@ -1,6 +1,6 @@
 [[Bestaand:Cormorant (Phalacrocorax carbo) (14).JPG|mini|300px|Vöär dat dröygend van ear vedderkleyd breydt de ålkraie ear vlünken up en karakteristske manere uut.]]
 
-De '''ålkraie''' (''Phalacrocorax carbo'') is en [[voegel|voagel]] uut de oordening ''Suliformes'', dee sik in 3–4 subspecies updeylt med en vorspreydingsgebeed van West[[Gruunlaand|gröönland]] un de [[Noord-Amerika|noordamerikaanske]] oustküste öäver [[Eurasien]] bet hen nå [[Australië (laand)|Australien]] un [[Ni'j-Zeelaand|Nyseyland]] to. De twey in [[Afrika|Afrika]] bröden subspecies wardet vandage as en eygen aard [[witbostålkraie]] (''Phalacrocorax lucidus'') teld.<ref>A. Kuus & E. Leibak (2018). ''Linnuatlas : Eesti haudelindude levik ja arvukus''. Tartu: Eesti Ornitoloogiaühing</ref>
+De '''ålkraie''' (''Phalacrocorax carbo'') is en [[voegel|voagel]] uut de ordening ''Suliformes'', dee sik in 3–4 subspecies updeylt med en vorspreydingsgebeed van West[[Gruunlaand|gröönland]] un de [[Noord-Amerika|noordamerikaanske]] oustküste öäver [[Eurasien]] bet hen nå [[Australië (laand)|Australien]] un [[Ni'j-Zeelaand|Nyseyland]] to. De twey in [[Afrika|Afrika]] bröden subspecies wardet vandage as en eygen aard [[witbostålkraie]] (''Phalacrocorax lucidus'') teld.<ref>A. Kuus & E. Leibak (2018). ''Linnuatlas : Eesti haudelindude levik ja arvukus''. Tartu: Eesti Ornitoloogiaühing</ref>
 
 == Name == 
 
@@ -34,6 +34,10 @@ De subspecies van de ålkraie vordeylet sik nå de achternåkoamen manere:
 * ''P. c. novaehollandiae'': [[Australië (laand)|Australien]] un [[Ni'j-Zeelaand|Nyseyland]]<ref>A. Kuus & E. Leibak (2018). ''Linnuatlas : Eesti haudelindude levik ja arvukus''. Tartu: Eesti Ornitoloogiaühing</ref>
 
 Medto wardt de japaanske ålkraie ouk as eygen subspecies ''P. c. hanedae'' teld.<ref>Avibase: [http://avibase.bsc-eoc.org/species.jsp?avibaseid=ACD40E8C3CC720BF ''Phalacrocorax carbo'']</ref>
+
+== Leavenswyse ==
+
+De ålkraie höldt sik in swarms or gruppen vöäral an klippen, velsen un up houge sey up. Geslächtsryp wardt de ålkraie med 3 or 4 jår un bröden deit see in gemeynskoppen in uut sprokholt bouwde nesten up velsen or in böyme up lütte eilanden. Twüsken aprilmånd un meimånd legt dat wyven 3–5 eier, dee de ölderen en 28–31 eavenlyds tyd bebrödet. De jungvoagels hödet se en 120–130 eavenlyds tyd, dårvan 45–55 eavenlyd in dat nest.<ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref>
 
 ==Referensen==
 <references/>
