*Empty MediaWiki Message*

--- a/Sydenstaert.mw
+++ b/Sydenstaert.mw
@@ -1,4 +1,4 @@
-De '''sydenstaert''' (''Bombycilla garrulus'') is en [[voegel|voagel]], dee binnen de oordening ''Passeriformes'' de familen van de sydenstaerten (''Bombycillidae'') tohöyrt. 
+De '''sydenstaert''' (''Bombycilla garrulus'') is en [[voegel|voagel]], dee binnen de ordening ''Passeriformes'' de familen van de sydenstaerten (''Bombycillidae'') tohöyrt. 
 
 == Markteykens ==
 
