*Empty MediaWiki Message*

--- a/Franekerediel.mw
+++ b/Franekerediel.mw
@@ -2,8 +2,8 @@
 |
 {{Gemiente |
 naeme = Franekerediel|
-bestaansnaeme vlagge = Vlagge Franekerediel.jpg |
-bestaansnaeme waopen = Waopen Franekerediel.jpg |
+bestaansnaeme vlagge = Franekeradeel flag.svg |
+bestaansnaeme waopen = Franekeradeel_wapen.svg |
 lekaosie = LocatieFranekeradeel |
 perveensie = [[Frieslaand]] |
 heufdplak = [[Franeker]] | 
