*Empty MediaWiki Message*

--- a/Iern.mw
+++ b/Iern.mw
@@ -1,3 +1,4 @@
+[[File:16th-century-Irish.jpg|150px|thumb|Ierse van Goalen in een skilderieje oet de 16e eeuw]]
 '''Iern''' is n naam van n volk dat vuural in [[Ierlaand (laand)|Ierlaand]] wont.
 
 == Geschiedenis ==
@@ -12,8 +13,8 @@ Toew de rest van Europa nog nit wus wat ne penne was, konn de Ierse geleardn al 
 Dr goat verhaaln dèt n antal Ierse [[monnikn]] op nen zeekern dag in n bootje beent estapt en vort evöarn beent. Noa nen langn tied voarn beent ze op n eilaand an ekömmn, woer ze toew dreks n [[klooster]] hebt ebouwt. Dit warn de eerste inwonners van [[Ieslaand]].
 
 Iern köant onmöhnig köjern. Biej negoosies tusken leande dee met mekoar verskel hebt of haddn, wör en wordt vaake bemiddeld duur Iern.
-[[Ofbeelding:Enyasweet.jpg|150px|thumb|De Ierse zangeres en leedtiesschriefster [[Enya]]]]
-== Verspreajding ==
+
+== Verspreaiding ==
 De Iern hebt zich de leste honderden joarn, of t non vriejwillig was of nit, oawer de hele wearld verspreaid.<br />
 Toew at Ierlaand ne [[kolonie]] van [[Engelaand (olde könninkriek)|Engelaand]] was, wördn de Iern zwoar oonderdrukt. Umdet de Iern krang in opstaand bleewn komn, wördn ze hard an epakt en oet ebuitt. Det zörgn det de Iern in völle te kort kömn en mosn gapn um t heuwd boawn water te hooldn. Disse "krimineeln" wördn in groten getale noar de aandere kolonies deporteerd, zo as t [[Verienigd Keuninkriek|Verenigd Keuninkriek]], de [[Verienigde Staoten van Amerika|Verennigde Stoatn]], [[Kannede|Canada]], [[Jamaika]] en [[Australi'je (land)|Australië]], woer't ze vaake hard mosn woarkn.
 
