*Empty MediaWiki Message*

--- a/Uutgeest.mw
+++ b/Uutgeest.mw
@@ -28,6 +28,10 @@ Bezeensweerdeg in Uutgeest bunt de Nederlands hervormde karke mit 14e eeuwsen to
 Fort an den Ham is éne van de 42 [[fort]]en van de [[Stelling van Amsterdam]], ne 19de eeuwse verdeadeigingsliene rundum [[Amsterdam]]. Et fort, eleagen tussen Uutgeest en [[Krommenie]], is los veur bezeukers op den letsten zundag van de moand van april t/m oktober.
 
 == Aandere darpen in de gemeente ==
+{|
+|-
+[[File:OL-Vrouwe-Geboorte-Kerk-Uitgeest.jpg|thumb|left|Karke in Uutgeest]]
+|-
 [[Darp]]en/[[Gehucht]]en:
 * [[Assum]]
 * [[Limmerkoog]]
@@ -35,8 +39,9 @@ Fort an den Ham is éne van de 42 [[fort]]en van de [[Stelling van Amsterdam]], 
 [[Noaberschap]]:
 * [[Busch en Dam]] (deels)
 * [[Groot Dorregeest]]
+|}
+{{-}}
 
-[[Ofbeelding:Uutgeest karke.jpg|thumb|left|300px|Karke in Uutgeest]]
 == Uutgoande verwiezingen ==
 * [http://www.uitgeest.nl Webstea van de gemeente]
 * [http://www.dehoopuitgeest.nl Industrieel Arfgoodpark "Den Hoop"]
