Er was te weinig info

--- a/Johannes_Calvijn.mw
+++ b/Johannes_Calvijn.mw
@@ -1,5 +1,5 @@
 [[Bestaand:John Calvin.jpg|thumb|Johannes Calvijn]]
-'''Johannes Calvijn''' ([[Fraans]]: ''Jean Cauvin'', laoter via et [[Latien|Latijn]] verangerd in: ''Jean Calvin'') (Noyon, [[10 juli]] [[1509]] - [[Genève]], [[27 meie|27 maie]] [[1564]] was een belangrikke Fraanse, [[christendom|christelijke]] theoloog van de rifformatie in is de naamgiever van een [[protestantisme|protestanse-christelijke]] stroming, et [[calvinisme]]. As reformator wordt Calvijn vaak in iene aodem eneumd mit [[Maarten Luther]], die z'n [[Maarten Luthers 95 stellingen|95 stellingen]] ponierde in [[1517]] toe Calvijn 8 jaor was. Kanker joden
+'''Johannes Calvijn''' ([[Fraans]]: ''Jean Cauvin'', laoter via et [[Latien|Latijn]] verangerd in: ''Jean Calvin'') (Noyon, [[10 juli]] [[1509]] - [[Genève]], [[27 meie|27 maie]] [[1564]] was een belangrikke Fraanse, [[christendom|christelijke]] theoloog van de rifformatie in is de naamgiever van een [[protestantisme|protestanse-christelijke]] stroming, et [[calvinisme]]. As reformator wordt Calvijn vaak in iene aodem eneumd mit [[Maarten Luther]], die z'n [[Maarten Luthers 95 stellingen|95 stellingen]] ponierde in [[1517]] toe Calvijn 8 jaor was. Soms stop ik verschillende objecten in joden
 
 == Nedersaksisch ==
 * [[Veluws]]: ''Jehannes Calvien''
