--- a/Country.mw
+++ b/Country.mw
@@ -14,7 +14,7 @@ Countrymusik is in Neaderland nit byster wyd verbreid. [[Ilse de Lange]] is eyne
 ===Neadersassisk===
 Bekende [[Nedersaksisch|neadersassiske]] grupen en artisten dee as kenmarken van countrymusik gebruket sint of warren [[Normaal]], [[Skik]] en [[Daniël Lohues]].
 
-</references?
+</references>
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Meziekstiel]]
