*Empty MediaWiki Message*

--- a/Country.mw
+++ b/Country.mw
@@ -1,6 +1,6 @@
-'''Country''', ouk bekend as '''country en western''' en ''hillbillymusik'', is nen musikstyl den as oarsprunglik uut de südelike [[Verienigde Staoten van Amerika|Ståten van de VS]] koamet. et is untstån in de jåren 20 van de [[20e eeuw|20. eywe]].<ref> Richard A. Peterson. "Creating Country Music: Fabricating Authenticity".|University of Chicago Press (1999). ISBN 978-0-226-66285-5. Bls. 9.</ref> Et hevt syn oarsprung in amerikaanske volksmusik en dan med name de [[Appalachiske musik|appalachisken folk]], [[westernmusik]] en [[blues]]).
+'''Country''', ouk bekend as '''country en western''' en ''hillbillymusik'', is nen musikstyl den as oarsprunglik uut de südelike [[Verienigde Staoten van Amerika|Ståten van de VS]] koamet. et is untstån in de jåren 20 van de [[20e eeuw|20. eywe]].<ref> Richard A. Peterson. "Creating Country Music: Fabricating Authenticity".|University of Chicago Press (1999). ISBN 978-0-226-66285-5. Bls. 9.</ref> Et hevt syn oarsprung in amerikaanske volksmusik en dan med name de [[Appalachiske musik|appalachisken folk]], [[westernmusik]] en [[blues]].
 
-Countrymusik besteyt vake uut [[ballade]]s en dansmusik med meyst simpele förme, volkske underwarpen en harmonyen. Belangrykste instrumenten sint de [[banjo]], elektriske en akoestiske [[gitaar|gitaren]], [[stålgitaar|stål-]] en [[dobro]]-gitaren en [[viole]]n en [[|mondharmonica|mundörgel]]s.<ref>[http://dictionary.reference.com/browse/country+music dictionary.com. "Country music – Definition". Bekeaken up 30 oktober 2011.]</ref> In de heyle geskydenisse van den styl blikt dat de blues-tounsoorten vake vöärkoamet.<ref>Richard J. Ripani. "The New Blue Music: Changes in Rhythm & Blues, 1950–1999". 1 augustus 2006. Wm. B. Eerdmans Publishing. ISBN 978-1-57806-861-6. Bls. 22.</ref>
+Countrymusik besteyt vake uut [[ballade]]s en dansmusik med meyst simpele förme, volkske underwarpen en harmonyen. Belangrykste instrumenten sint de [[banjo]], elektriske en akoestiske [[gitaar|gitaren]], [[stålgitaar|stål-]] en [[dobro]]-gitaren en [[viole]]n en [[mondharmonica|mundörgel]]s.<ref>[http://dictionary.reference.com/browse/country+music dictionary.com. "Country music – Definition". Bekeaken up 30 oktober 2011.]</ref> In de heyle geskydenisse van den styl blikt dat de blues-tounsoorten vake vöärkoamet.<ref>Richard J. Ripani. "The New Blue Music: Changes in Rhythm & Blues, 1950–1999". 1 augustus 2006. Wm. B. Eerdmans Publishing. ISBN 978-1-57806-861-6. Bls. 22.</ref>
 
 Volgens Lindsey Starnes wör de term ''country'' voordan populäärder vanaf 1940, meyr dan de term ''hillbilly-musik''. et ümslöät ouk westernmusik, dat ungeveyr up deselvde tyd en wyse as hillbilly-musik untstünd. In 2009 was in de VS country-musik de meystelüsterde musik tydens spitsüren in den auto.<ref>ARRP Bulletin. Vol. 53 No 1. "50&nbsp;Minutes on the Road. Betsy Tower. page 50. citing Commuting in America III and Arbitron.</ref>
 
