*Empty MediaWiki Message*

--- a/Kim_Kardashian.mw
+++ b/Kim_Kardashian.mw
@@ -1,6 +1,6 @@
 [[File:Kim_Kardashian_2018_5.png|thumb|right|250px|Kim Kardashian in [[2018]]]]
 
-'''Kimberly Noel Kardashian West''' (meydkensname '''Kardashian''', den [[21. oktober]] [[1980]]) is ne [[Verienigde Staoten van Amerika|amerikaanske]] mediapersöynlikheid, model, sakenvrouw, [[akteur|aktrice]] en bekend persoon. Kardashian kreag eyrste media-andacht as vreandin en styliste van [[Paris Hilton]]. Mär pas vanaf [[2002]] kreag se breydere bekendheid döär ne [[seksvideo]], ''[[Kim Kardashian, Superstar]]'', van öär den as sik oaver internet verspreidden.<ref>[https://pagesix.com/2017/03/27/the-kim-kardashian-sex-tape-an-oral-history/ Pagesix.com. "The Kim Kardashian Sex Tape An Oral History".]</ref> Later in [[2007]] verskeynen see en öäre family in de reality-TV-ryge ''[[Keeping Up with the Kardashians]]''. Et sukses dårvan leidden al rap töt afleidingen der van, so as [[Kourtney and Kim Take New York]]'' (2011-2012) en ''Kourtney and Kim Take Miami]]'' ([[2009]]-[[2013]]).
+'''Kimberly Noel Kardashian West''' (meydkensname '''Kardashian''', den [[21 oktober]] [[1980]]) is ne [[Verienigde Staoten van Amerika|amerikaanske]] mediapersöynlikheid, model, sakenvrouw, [[akteur|aktrice]] en bekend persoon. Kardashian kreag eyrste media-andacht as vreandin en styliste van [[Paris Hilton]]. Mär pas vanaf [[2002]] kreag se breydere bekendheid döär ne [[seksvideo]], ''[[Kim Kardashian, Superstar]]'', van öär den as sik oaver internet verspreidden.<ref>[https://pagesix.com/2017/03/27/the-kim-kardashian-sex-tape-an-oral-history/ Pagesix.com. "The Kim Kardashian Sex Tape An Oral History".]</ref> Later in [[2007]] verskeynen see en öäre family in de reality-TV-ryge ''[[Keeping Up with the Kardashians]]''. Et sukses dårvan leidden al rap töt afleidingen der van, so as [[Kourtney and Kim Take New York]]'' (2011-2012) en ''Kourtney and Kim Take Miami]]'' ([[2009]]-[[2013]]).
  
 De lätste jåren bouwden Kim Kardashian stelselmåtig ne [[online]] en [[sociale media]]-anweasigheid up. See bereikeden dårmed hunderden miljonen volgers up [[Twitter]] en [[Instagram]].<ref>[http://www.etonline.com/news/160473_kim_kardashian_on_the_success_of_her_mobile_app_and_her_social_media_empire/ ET Online. Seemayer, Zach. "Kim Kardashian on the Success of Her Mobile App and Her Social Media Empire". etonline.com.] Bekeaken up 11 juni 2016.]</ref><ref>[https://socialblade.com/instagram/top/100/followers socialblade.com. "Top 100 Instagram Users by Followers".]</ref> Se hevt verskeidene produkte med öären naam der up uutegeaven, so as et [[app|mobile spelleke]] ''Kim Kardashian: Hollywood'', ne ryge an kleyder en produkten, een fotobook under de name ''Selfish'' en ne persöynlike app med öäre naam.
 
