--- a/Volkswagen.mw
+++ b/Volkswagen.mw
@@ -1,3 +1,4 @@
+[[Bestaand:Volkswagen logo 2019.svg|thumb|250px|Volkswagen logo]]
 [[Bestaand:VW Golf V wiki.JPG|thumb|right|400px|VW Golf V 2004]]
 '''Volkswagen''' (vake of-ekort as '''VW''') is t belangriekste [[auto]]moark van de [[Volkswagen Group]]. Volkswagen hef twee modeln in de top vief van de meest verkochte [[auto|auto's]] ter wearld ooit; de [[Volkswagen Kever]] en de [[Volkswagen Golf]] (staand van zaakn [[2004]]).
 
