*Empty MediaWiki Message*

--- a/Neadersassiske_måten.mw
+++ b/Neadersassiske_måten.mw
@@ -1,63 +1,65 @@
-'''Neersassiese moaten''' wörden töt an de [[Tweede Weareldoorlog]] broekt um inhoold, gewicht, ofstaand en leankte te metten. Rechtevoort wörd t [[metrieke stelsel]] broekt en zeent de oolde moaten hoaste vergetten. Disse kömmen töt ne zekere heugte oawereen met et [[Britse Keaizerlike Metstelsel]].
+'''Neadersassiske måten''' wörden töt an den [[Tweede Weareldoorlog|tweyden Wearldoorlog]] bruked üm inhold, swöärte, afstand en längde te meaten. Se sint vergelykbår med et [[Britske Kaeserlike Meatstelsel]]. Rechtevoord wördet et [[metrike stelsel]] bruked en sint de olde måten håste vergeaten. 
 
-De inhooldsmoaten wörden meesttieds eneumd noar de soorten bäkke, kisten of kannen woer as et emettene in kon. De leankte wör emetten met delen van et lief. Disse naams warren nit toovallig keuzen of per strekke verskillend, mear wörden van [[Grönningen]] töt n [[Achterhook]] dageliks broekt, anpast noar de lokale oetsproake.
+De inholdsmåten wörden meysttyds enöömd når de soorten bäkke, kisten of kannen wår as et emeatene in kun. De längde wör emeaten med deylen van et lyf of vöälbrukede vöärwarpen. Disse naams warren van [[Grönningen]] töt den [[Achterhook]] dageliks in bruuk, anpassed når lokale uutspråke.
 
-Et biezeundere is det bepoalde namens vuur zowal inhoold as oppervlakte en gewicht broekt wörden, zo as bievuurbeeld ''speent'' en ''murre''.
+Et bysündere is dat bepålde naams vöär inhold, uppervlak en gewicht etselvde warren, so as ''spint'' en ''mürre''.
 
-==Ofskaffing==
-In [[1820]] wör in [[Nederlaand]] de [[IJkwet]] invoord. Dit wör doan um de weeldgröai an moaten of te skaffen. Zo was bv. n [[Tweante|Tweants]] ''skäppel'' grötter as n [[Utrecht (previnsie)|Utrechts]]. In et [[Neersassies]] gebeed blewen de oolde moaten skoonwal nog mear as hoonderd joar broekt.
 
-==Indelige==
-Um een good beeld te kriegen van de grötte van de broekte moaten, wörd de benöadering in metriese moaten der achter zat:
+
+==Afskaffing==
+In [[1820]] wör in [[Nederland]] de [[IJkwet]] invoord, üm de wildgroi an måte en definitys af te skaffen. Een [[Tweante|twentsk]] ''skeapel'' was by vöärbeald gröäter as een [[Utrecht (previnsie)|utrechtsk]]. Under et volk bleaven de olde måten skounwal noch meyr as hunderd jår in bruuk. Et woord ''mürre'' of ''müdde'' is in et dageliks leaven mangs noch in bruuk as et geyt oaver een ''müd aerpel''. Ouk et timmermansgerei ''duumstok'' verwist noch når de olde duumafstand, vergelykbår med den engelsken ''inch''.
+
+==Indeyling==
+Vöär insicht in den ümvang van de brukede måten sint in de understånde oaversichten de metriske måten der nöäst esat.
 
 {|
 | width=50% |
-===Inhoold===
+===Inhold===
 *''vat'' (100 l.)
-*''speent'' (8 l.)
-*''viefkop'' (5 l.)
+*''spint'' (8 l.)
+*''vyvkop'' (5 l.)
 *''mengel'' (3 l.)
 *''kanne'' of ''känneken'' (1 l.)
 *''vläske'' (8 dl.)
-*''oort'' of ''eurtjen'' (4 dl.)
-*''möatjen'' (2 dl.)
+*''oort'' of ''öörtjen'' (4 dl.)
+*''möätjen'' (2 dl.)
 *''pötjen'' (1 dl.)
-*''half pötjen'' (5 cl.)
-*''vingerhood'', ''-heudjen'' (1 cl) <ref>Schönfeld-Wichers, K.D. ''Woordenboek Nederlands-Twents''. 1979: Hengelo, Uitgeverij Broekhuis. "maten". p. 301</ref>
+*''halv pötjen'' (5 cl.)
+*''vingerhood'', ''-höödjen'' (1 cl) <ref>Schönfeld-Wichers, K.D. ''Woordenboek Nederlands-Twents''. 1979: Hengelo, Uitgeverij Broekhuis. "maten". p. 301</ref>
 
-===Leankte===
-*''skuppensleankte'' (leankte van ne [[batse|skuppe]] met stellen)
-*''Elle'' (ong. 68 cm.)
-*''Veerl'' of ''verel'' (17 cm) (Of eleaidt van 'een veerde deel', nen kwart)
+===Längde===
+*''sküppenslängde'' (längde van ne [[batse|sküppe]] met stellen)
+*''Elle'' (ung. 68 cm.)
+*''Veerl'' of ''verel'' (17 cm) (afleided van 'een veerde deyl', nen kwart)
 *''palm'' of ''pälmken'' (6,8 cm)
-*''haandbreed''
+*''handbreyd''
 *''voot'' (30 cm)
-*''span'' (van doem töt peenk, ong. 20 cm)
-*''doem'' of ''duum'' (2,5 cm)
+*''span'' (van duum töt pink, ong. 20 cm)
+*''duum'' (2,5 cm)
 
-===Oppervlak===
-Ook warren der ofzeunderlike moaten um stukke groondoppervlak op te metten:
-*''beunder'' (1 are)
-*''murre'' (32 are, vroger ook 60 x 60 m)
-*''speent'' (2 are)
+===Uppervlak===
+Ouk warren der afsünderlike måten üm stükken grunduppervlak te meaten:
+*''bünder'' (1 are)
+*''müdde'' (32 are, vroger ouk 60 x 60 m)
+*''spint'' (2 are)
 *''roo'' (1 are)
 *''margen'' ([[Veluwe]], 600 roe)
-*''skäppel'' (40 x 40 m, of 887 m²) <ref>Schönfeld-Wichers, K.D. ''Woordenboek Nederlands-Twents''. 1979: Hengelo, Uitgeverij Broekhuis. "landmaten". p. 285</ref>
+*''skeapel''/''skeppel (40 x 40 m, of 887 m²) <ref>Schönfeld-Wichers, K.D. ''Woordenboek Nederlands-Twents''. 1979: Hengelo, Uitgeverij Broekhuis. "landmaten". p. 285</ref>
 
 | valign=top |
 ===Gewicht===
-*''murre'' of ''mud'' (70 kg, vroger 80 kg)
-*''skäppel'' (20 kg)
-*''speent'' (10 kg)
-*''poond'' (480 g)
-*''oons'' (30 g)
-*''lood'' of ''leudjen'' (10 g)
+*''müdde'' (70 kg, vroger 80 kg)
+*''skeapel''/skeppel (20 kg)
+*''spint'' (10 kg)
+*''pund'' (480 g)
+*''uns'' (30 g)
+*''loud'' of ''löydjen'' (10 g)
 
-===Ofstaand===
-*''trad'' (groten vootstap, 3,5 voot, ong. 1 meter) (vgl. et Engelse [[yard]])
-*''hanentrad'' (kleainen ofstaand)
-*''hanenskreeuw'' (ofstaand töt woerop t gekreei van nen [[haan|hanen]] te heuren is)
-*''smetteweagens'' (steenworpsofstaand) <ref>Schönfeld-Wichers, K.D. ''Woordenboek Nederlands-Twents''. 1979: Hengelo, Uitgeverij Broekhuis. "afstand". p. 109</ref> <ref>Schönfeld-Wichers, K.D. ''Woordenboek Nederlands-Twents''. 1979: Hengelo, Uitgeverij Broekhuis. "lengtematen". p. 289</ref>
+===Afstand===
+*''trad'' (grouten vootstap, 3,5 voot, ong. 1 meter) (vgl. et engelske [[yard]])
+*''hanentrad'' (gevöölsmåte. Kleinen afstand)
+*''hanenskreeuw'' (gevöölsmåte. Afstand töt wår as et gekrai van nen [[haan|hanen]] te höyren is)
+*''smetteweagens'' (gevöölsmåte. So wyd as een menske ne keie smyten kan.) <ref>Schönfeld-Wichers, K.D. ''Woordenboek Nederlands-Twents''. 1979: Hengelo, Uitgeverij Broekhuis. "afstand". p. 109</ref> <ref>Schönfeld-Wichers, K.D. ''Woordenboek Nederlands-Twents''. 1979: Hengelo, Uitgeverij Broekhuis. "lengtematen". p. 289</ref>
 |}
 
 {{Bron|<references/>}}
