*Empty MediaWiki Message*

--- a/Neadersassiske_måten.mw
+++ b/Neadersassiske_måten.mw
@@ -1,4 +1,4 @@
-'''Neadersassiske måten''' wörden töt an den [[Tweede Weareldoorlog|tweyden Wearldoorlog]] bruked üm inhold, swöärte, afstand en längde te meaten. Se sint vergelykbår med et [[Britske Kaeserlike Meatstelsel]]. Rechtevoord wördet et [[metrike stelsel]] bruked en sint de olde måten håste vergeaten. 
+'''Neadersassiske måten''' wörden töt an den [[Tweede Wereldoorlog|Tweyden Wearldoorlog]] bruked üm inhold, swöärte, afstand en längde te meaten. Se sint vergelykbår med et [[Britske Kaeserlike Meatstelsel]]. Rechtevoord wördet et [[metrike stelsel]] bruked en sint de olde måten håste vergeaten. 
 
 De inholdsmåten wörden meysttyds enöömd når de soorten bäkke, kisten of kannen wår as et emeatene in kun. De längde wör emeaten med deylen van et lyf of vöälbrukede vöärwarpen. Disse naams warren van [[Grönningen]] töt den [[Achterhook]] dageliks in bruuk, anpassed når lokale uutspråke.
 
