--- a/Neadersassiske_måten.mw
+++ b/Neadersassiske_måten.mw
@@ -7,7 +7,7 @@ Et bysündere is dat bepålde naams vöär inhold, uppervlak en gewicht etselvde
 
 
 ==Afskaffing==
-In [[1820]] wör in [[Nederland]] de [[IJkwet]] invoord, üm de wildgroi an måte en definitys af te skaffen. Een [[Tweante|twentsk]] ''skeapel'' was by vöärbeald gröäter as een [[Utrecht (previnsie)|utrechtsk]]. Under et volk bleaven de olde måten skounwal noch meyr as hunderd jår in bruuk. Et woord ''mürre'' of ''müdde'' is in et dageliks leaven mangs noch in bruuk as et geyt oaver een ''müd aerpel''. Ouk et timmermansgerei ''duumstok'' verwist noch når de olde duumafstand, vergelykbår med den engelsken ''inch''.
+In [[1820]] wör in [[Nederland]] de [[IJkwet]] invoord, üm de wildgroi an måte en definitys af te skaffen. Een  ''skeapel'' was by vöärbeald gröäter in [[Tweante|twentsk]] as in [[Utrecht (previnsie)|Utrecht]]. Under et volk bleaven de olde måten skounwal noch meyr as hunderd jår in bruuk. Et woord ''mürre'' of ''müdde'' is in et dageliks leaven mangs noch in bruuk as et geyt oaver een ''müd aerpel''. Ouk et timmermansgerei ''duumstok'' verwist noch når de olde duumafstand, vergelykbår med den engelsken ''inch''.
 
 ==Indeyling==
 Vöär insicht in den ümvang van de brukede måten sint in de understånde oaversichten de metriske måten der nöäst esat.
