*Empty MediaWiki Message*

--- a/Hanze.mw
+++ b/Hanze.mw
@@ -1,4 +1,4 @@
-De '''Hanze''' was een militair bondgenootskop van [[gilde|handelsgildes]] die in de late [[middeleeuwn|middelieuwen]] en de vrogmoderne tied (tussen de [[13e eeuw|dartiende]] en [[17e eeuw|zeubentiende ieuw]]) een handelsmonopolie vestigden en in de bienen hölden in de [[Oostzee]], een diel van de [[Noordzee]] en 't miest van [[Noord-Europa]].
+De '''Hanze''' was een militair bondgenootschap van [[gilde|handelsgildes]] die in de late [[middeleeuwn|middelieuwen]] en de vroegmoderne tijd (tussen de [[13e eeuw|dartiende]] en [[17e eeuw|zeubentiende ieuw]]) een handelsmonopolie vestigden en in de bienen hölden in de [[Oostzee]], een deel van de [[Noordzee]] en 't meest van [[Noord-Europa]].
 
 == Geschiedenis ==
 Oaver 't algemien voert geschiedkundigen 't begun van de Hanze terogge op de vestiging van de Noord-Duutse stad [[Lübeck]], in [[1158]]/[[1159]] opericht naodet Hinnerk de Leeuw, de graaf van Saksen, 't gebied veroverden op de graaf van Schauenburg en Holstien.
