*Empty MediaWiki Message*

--- a/Dongerediel.mw
+++ b/Dongerediel.mw
@@ -1,7 +1,7 @@
 {{Gemiente |
 naeme = Dongerediel |
-bestaansnaeme vlagge = Vlagge Dongerediel.jpg |
-bestaansnaeme waopen = Waopen Dongerediel.jpg |
+bestaansnaeme vlagge = Flag_of_Dongeradeel.svg |
+bestaansnaeme waopen = Coat_of_arms_of_Dongeradeel.svg |
 lekaosie = LocatieDongeradeel |
 perveensie = [[Frieslaand]] |
 heufdplak = [[Dokkum]] | 
