--- a/Dalsen_(gemiente).mw
+++ b/Dalsen_(gemiente).mw
@@ -1,7 +1,7 @@
 {{Gemeente |
 naam = Dalsen |
 bestaansnaam vlagge = Flag of Dalfsen.svg |
-bestaansnaam wapen = Coat of arms of Dalfsen.svg |
+bestaansnaam wapen = Coat_of_arms_of_Dalfsen.svg |
 lokasie = Dalsenlocaotie |
 previnsie = [[Oaveriessel]] |
 heufplaose = [[Dalsen (dörp)|Dalsen]] |  
