*Empty MediaWiki Message*

--- a/Dalsen_(gemiente).mw
+++ b/Dalsen_(gemiente).mw
@@ -2,7 +2,7 @@
 naam = Dalsen |
 bestaansnaam vlagge = Flag of Dalfsen.svg |
 bestaansnaam wapen = Coat_of_arms_of_Dalfsen.svg |
-lokasie = Dalsenlocaotie |
+lokasie = NL_-_locator_map_municipality_code_GM0148_(2016) |
 previnsie = [[Oaveriessel]] |
 heufplaose = [[Dalsen (dörp)|Dalsen]] |  
 oppervlak = 166,50 |
