--- a/Enkhuzen.mw
+++ b/Enkhuzen.mw
@@ -33,7 +33,7 @@ End 17e eeuwe trad et verval in. De Engelse kriege, het verzanden van de havenmo
 == Galleri-je ==
 <gallery>
 Ofbeelding:Enkhuizen_anzicht.jpg|Anzich op Enkhuzen
-Ofbeelding:Enkhuizen_holten_karktoorn.jpg|Holten karktoorn in Enkhuzen
+Ofbeelding:TheNetherlands-Enkhuizen-church.jpg|Karktoorn in Enkhuzen
 Ofbeelding:Enkhuizen_olde_geavels.jpg|Olde geavels in Enkhuzen
 Ofbeelding:Enkhuizen_zuuderzeemuseem.jpg|Uutzich op et Zuderzeemuseem in Enkhuzen
 </gallery>
