*Empty MediaWiki Message*

--- a/Oostfloandern.mw
+++ b/Oostfloandern.mw
@@ -1,7 +1,7 @@
 {{TabProvBelg
 | noam = Oostfloandern
 | ofbeelding vlage = [[Bestaand:VlagOostVlaanderen.png|125px|Vlage van Oostfloandern]]
-| ofbeelding woapen = [[Bestaand:WapenOostVlaanderen.jpg|130px|Woapen van Oostfloandern]]
+| ofbeelding woapen = [[Bestaand:Wapen_provincie_Oost-Vlaanderen.png|130px|Woapen van Oostfloandern]]
 | kortnoam = Oostfloandern
 | heufdstad = [[Gent]]
 | opp = 2.982
