*Empty MediaWiki Message*

--- a/T_Veen.mw
+++ b/T_Veen.mw
@@ -3,7 +3,7 @@
 {{Gemeente |
 naam = t Veen |
 bestaansnaam vlagge = Veenendaal flag.png |
-bestaansnaam wapen = Waopen 't Veen.jpg |
+bestaansnaam wapen = Veenendaal-wapen.svg |
 lokasie = LocatieVeenendaal |
 previnsie = [[Utrecht (provinsie)|Utrecht]] |
 heufplaose = '''t Veen''' |
