*Empty MediaWiki Message*

--- a/Google_Maps.mw
+++ b/Google_Maps.mw
@@ -9,6 +9,9 @@ In [[2013]] wör der een niej ontwoarp van de komputer-[[app]] vrie egewen, nöa
 
 Volgens Google har et bedrief in 2012 mear as 7100 leu in deenst um de wearld in kaarte te brengen.
 
+==Referensys==
+<references/>
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Internet]]
 [[Kategorie: Google]]
