--- a/Goedereede.mw
+++ b/Goedereede.mw
@@ -44,9 +44,10 @@ Den Utrechter Adriaan Boelens (2 meert 1459 – 14 september 1523) was den enige
 
 == Galleri'je ==
 <gallery>
-Ofbeelding:Goedereede-anzicht.jpg|Anzicht
-Ofbeelding:Goedereede-klokgeavels.jpg|Klokgaevels
-Ofbeelding:Goedereede-toorn.jpg|Toren
+File:Goedereede-anzicht.jpg|Anzicht
+File:Goedereede molen Windvang aan de rand van de bebouwde kom.jpg|Mölle ''Windvang'' in 2008.
+File:Netherlands-Goedereede-toren-molen-1910.jpg|De toren en de mölle in 1910.
+File:RM16193 Goedereede - Noordzijde Haven.jpg|Noordziede Haven
 </gallery>
 
 {{Zuud-Hollaand}}
