*Empty MediaWiki Message*

--- a/Gaasterlaand-Sloten.mw
+++ b/Gaasterlaand-Sloten.mw
@@ -1,7 +1,7 @@
 {{Veurmaolige gemeente |
 naeme = Gaasterlaand-Sloten |
-bestaandsnaam vlagge = VlagGaasterlân-Sleat.jpg |
-bestaandsnaam wapen = WapenGaasterlân-Sleat.jpg |
+bestaandsnaam vlagge = Gaasterlan-Sleat flag.svg |
+bestaandsnaam wapen = Gaasterland-Sloten_wapen.svg |
 lokasie = LocatieGaasterlân-Sleat |
 provinsie = [[Frieslaand]] |
 heufdplaotse = [[Balk]] |  
