*Empty MediaWiki Message*

--- a/Kampen_(Overiessel).mw
+++ b/Kampen_(Overiessel).mw
@@ -1,7 +1,7 @@
 {{Gemeente |
 naam = Kampen |
 bestaansnaam vlagge = Flag of Kampen.svg |
-bestaansnaam wapen = Waopen van Kampen.png |
+bestaansnaam wapen = Kampen_wapen.svg |
 lokasie = LocatieKampen |
 previnsie = [[Oaveriessel|Overiessel]] |
 heufplaose = '''Kampen''' |  
