*Empty MediaWiki Message*

--- a/Karkraode.mw
+++ b/Karkraode.mw
@@ -1,7 +1,7 @@
 {{Gemiente |
 naeme = Karkraode |
 bestaansnaeme vlagge = Flag of Kerkrade.svg |
-bestaansnaeme waopen = Kerkrade wapen.png |
+bestaansnaeme waopen = Kerkrade_wapen.svg |
 lekaosie = LocatieKerkrade |
 perveensie = [[Limburg (Nederlaand)|Limburg]] |
 heufdplak = '''Karkraode''' |
