*Empty MediaWiki Message*

--- a/Koggenlaand.mw
+++ b/Koggenlaand.mw
@@ -1,16 +1,16 @@
 {{Gemeante |
 naam = Koggenlaand |
-bestaandsnaam vlagge =  |
+bestaandsnaam vlagge = Koggenland_vlag.svg |
 bestaandsnaam woapn = Koggenland wapen.jpg |
 lokatie-svg = Map - NL - Municipality code 1598 (2009).svg |
 proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = [[De Goorn]]/[[Avenhorn]] |
-öppervlakte = 83,54 |
-öppervlakte laand = 80,63 |
-öppervlakte water = 2,91 |
-inwonners =  21.081|
-doatum inwonners = 2007 |
-dichtheid = 238 |
+öppervlakte = 84,08 |
+öppervlakte laand = 80,32 |
+öppervlakte water = 3,76 |
+inwonners =  22.738|
+doatum inwonners = 2019 |
+dichtheid = 283 |
 breedtegroad = 52/39//N |
 lengtegroad =  4/57//E |
 verkeersoader = [[A7]], [[N243]], [[N507]] |
@@ -62,7 +62,6 @@ Den gemeentename verwis noar de historiese [[kogge]] uut de [[middeleeuwen]]. Zo
 == Galleri-je ==
 <gallery>
 Ofbeelding:Avenhorn.jpg|Avenhorn darp
-Ofbeelding:Ursum.jpg|Anzicht op Ursum
 Ofbeelding:Schermerhorn_m%C3%B6lle.jpg|Mölle in Schermerhorn
 Ofbeelding:Schermerhorn_darp.jpg|Schermerhorn darp
 </gallery>
