*Empty MediaWiki Message*

--- a/Ni'jkoop.mw
+++ b/Ni'jkoop.mw
@@ -2,15 +2,15 @@
 naam = Ni'jkoop |
 bestaandsnaam vlagge = Flag of Nieuwkoop.svg |
 bestaandsnaam woapn = Nieuwkoop wapen.svg |
-lokatie = LocatieNieuwkoop 2007 |
+lokatie = NL_-_locator_map_municipality_code_GM0569_(2016) |
 proveensie = [[Ofbeelding:Flag Zuid-Holland.svg|20px|Zuud-Hollaand]] [[Zuud-Hollaand]] |
 heufdplaats = '''Ni'jvene, Ter Oar & Ni'jkoop''' |
-öppervlakte = 90,19 |
-öppervlakte laand = 74,14 |
-öppervlakte water = 16,05 |
-inwonners = 27.033|
-doatum inwonners = [[1 juli]] [[2006]] |
-dichtheid = 341 |
+öppervlakte = 91,16 |
+öppervlakte laand = 78,05 |
+öppervlakte water = 13,11 |
+inwonners = 28.628|
+doatum inwonners = [[1 jannewaori]] [[2019]] |
+dichtheid = 367 |
 breedtegroad = 52/09/0/N |
 lengtegroad =  4/48/0/E|
 verkeersoader = [[N231]] |
@@ -33,7 +33,6 @@ Et oldste deel van Ni'jkoop besteet uut lintbebouwing langs de [[Ni'jkoopse plas
 
 In de uutgoave van 3 mei 2008 van et [[Algemeen Dagblad]] met den joarleksen Misdoadmeter ovver et joar 2007 kwam de gemeente Ni'jkoop as veiligste gemeente van Nederlaand uut de busse.
 
-
 == Uutgoande verwiezingen ==
 *[http://www.nieuwkoop.nl/ Webstea Gemeente Ni'jkoop]
 *[http://www.vvv-nieuwkoop.nl/ VVV Ni'jkoop]
@@ -41,7 +40,7 @@ In de uutgoave van 3 mei 2008 van et [[Algemeen Dagblad]] met den joarleksen Mis
 
 == Galleri-je ==
 <gallery>
-Ofbeelding:Langeraar_karke.jpg|Karke in Langeraas
+Ofbeelding:Adrianuskerk Langeraar.JPG|Karke in Langeraar
 Ofbeelding:Langeraar_plas.jpg|Ni'jkoopse plassen
 </gallery>
 
