*Empty MediaWiki Message*

--- a/Ni'jeferd.mw
+++ b/Ni'jeferd.mw
@@ -1,7 +1,7 @@
 {{Veurmaolige gemeente |
 naam = Ni'jeferd |
-bestaandsnaam vlagge = VlagNijefurd.jpg |
-bestaandsnaam wapen = WapenNijefurd.jpg |
+bestaandsnaam vlagge = Nijefurd flag.svg |
+bestaandsnaam wapen = Nijefurd_wapen.svg |
 lokasie = LocatieNijefurd |
 provinsie = [[Frieslaand]] |
 heufdplaotse = [[Workum]] |  
