--- a/Portaol:Nedersaksische_cultuur.mw
+++ b/Portaol:Nedersaksische_cultuur.mw
@@ -92,7 +92,7 @@ __NOTOC__ __NOEDITSECTION__
 |- valign=top
 |width=50% bgcolor=white style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <span style="font-size:larger;font-weight:bold;">Meziekgroepen en zangers</span>
-[[Ofbeelding:Daniël Lohues.png|left|170px|Daniël Lohues]]
+[[File:Daniel_Lohues_(2018).jpg|left|170px|Daniël Lohues]]
 [[Boh Foi Toch]] ♪ [[Bukkes]]<br />
 [[Duo Karst]] ♪ [[Höllenboer]]<br />
 [[Jajem (band)|Jajem]] ♪ [[Bennie Jolink]]<br />
