--- a/Loenen_(vroggere_gemeente).mw
+++ b/Loenen_(vroggere_gemeente).mw
@@ -39,8 +39,8 @@ De meeste darpen deelt ne min of meer gemeenschoppeleke historie dee zaeker trö
 
 ==Galleri'je==
 <gallery>
-Ofbeelding:Loenen_kastele.jpg|Kasteel Loenen
-Ofbeelding:Loenen_anzicht.jpg|Anzicht op Loenen
+File:Loenen_aan_de_Vecht,_korenmolen_De_Hoop_RM26046_foto4_2015-08-06_18.20.jpg|Korenmölle De Hoop
+File:Loenen_anzicht.jpg|Anzicht op Loenen
 </gallery>
 
 {{Utrecht}}
