*Empty MediaWiki Message*

--- a/Liwwadderediel.mw
+++ b/Liwwadderediel.mw
@@ -1,7 +1,7 @@
 {{Gemiente |
 naeme = Liwwadderediel |
-bestaansnaeme vlagge = Vlagge Liwwadderediel.jpg |
-bestaansnaeme waopen = Waopen Liwwadderediel.jpg |
+bestaansnaeme vlagge = Flag_of_Leeuwarderadeel.svg |
+bestaansnaeme waopen = Coat_of_arms_of_Leeuwarderdeel.svg |
 lekaosie = LocatieLeeuwarderadeel |
 perveensie = [[Frieslaand]] |
 heufdplak = [[Stiens]] |  
