*Empty MediaWiki Message*

--- a/Littenserediel.mw
+++ b/Littenserediel.mw
@@ -1,7 +1,7 @@
 {{Gemiente |
 naeme = Littenserediel |
-bestaansnaeme vlagge = Vlagge Littenserediel.jpg |
-bestaansnaeme waopen = Waopen Littenserediel.jpg |
+bestaansnaeme vlagge = Littenseradiel flag.svg |
+bestaansnaeme waopen = Coat_of_arms_of_Littenseradiel.svg |
 lekaosie = LocatieLittenseradiel |
 perveensie = [[Frieslaand]] |
 heufdplak = [[Wommels]] |  
