--- a/Maerssen_(Utrecht).mw
+++ b/Maerssen_(Utrecht).mw
@@ -41,9 +41,9 @@ Sinds [[1 jannewaori]] [[2011]] is de gemeente Meerssen op-egaon in de nieuwe ge
 
 ==Foto-uutstalling==
 <gallery>
-Bestaand:Meerssen_karke.jpg|t Zicht op Meerssen
+Bestaand:Maarssen. Mooie nieuwbouw in Maarssen.jpg|t Zicht op Meerssen
 Bestaand:Boelenstein maarssen.jpg|Boelenstein in Meerssen
-Bestaand:Old_zulen.jpg|Slot Zulen, Oud-Zulen
+Bestaand:Jacobus Storck - Capriccio View of Maarsen.jpg|Schilderi-je van Meerssen (1664, Jacobus Storck)
 </gallery>
 
 {{Utrecht}}
