*Empty MediaWiki Message*

--- a/Maerssen_(Utrecht).mw
+++ b/Maerssen_(Utrecht).mw
@@ -19,7 +19,7 @@
 | postkode = 
 | webstae = http://www.stichtsevecht.nl/
 }}
-'''Maerssen''' (IPA: {{IPA|/meːrsn̩/}}; [[Nederlaands|Nederlands]]: ''Maarssen'') is een darp en vöärmålige [[gemiente (bestuur)|gemeynde]] in et noorden van de stad [[Utrecht (stad)|Utrecht]], in de [[Nederlaand|neaderlandske]] [[pervincie|provinsy]] [[Utrecht (provinsie)|Utrecht]]. Et darp Maerssen beståt üüt twey deylen, eskeiden döär et [[Amsterdam-Rynkanaal]]. Oustelik dårvan leit et oorsprungelike darp, ouk wel anedüded as Maerssen-darp; Westelik leit de wyk [[Maerssenbrook]], wår ouk een [[station]] is. Maerssen-darp leit behalve an et kanaal ouk an de rivyr de [[Utrechtse Vecht|Vechte]]. 
+'''Maerssen{{Info|Nysassiske Skryvwyse}}''', ouk wel eskreaven as '''Meerssen{{Info|Regionale skryvwyses}}''', (IPA: {{IPA|/meːrsn̩/}}; [[Nederlaands|Nederlands]]: ''Maarssen'') is een darp en vöärmålige [[gemiente (bestuur)|gemeynde]] in et noorden van de stad [[Utrecht (stad)|Utrecht]], in de [[Nederlaand|neaderlandske]] [[pervincie|provinsy]] [[Utrecht (provinsie)|Utrecht]]. Et darp Maerssen beståt üüt twey deylen, eskeiden döär et [[Amsterdam-Rynkanaal]]. Oustelik dårvan leit et oorsprungelike darp, ouk wel anedüded as Maerssen-darp; Westelik leit de wyk [[Maerssenbrook]], wår ouk een [[station]] is. Maerssen-darp leit behalve an et kanaal ouk an de rivyr de [[Utrechtse Vecht|Vechte]]. 
 
 Sinds [[1 jannewaori|1 januari]] [[2011]] is de gemeynde Maerssen upegån in de nye gemeynde [[Stichtse Vecht|Stichtske Vechte]].
 
