--- a/Menaldumediel.mw
+++ b/Menaldumediel.mw
@@ -7,10 +7,10 @@ perveensie = [[Frieslaand]] |
 heufdplak = [[Menaldum]] | 
 oppervlak = 70,03 |
 oppervlak laand = 68,87 |
-oppervlak waeter = 1,16 |
-inwoners = 13.614 |
-daotum inwoners = 1 meie 2014 |
-dichthied = 198 |
+oppervlak waeter = 1,07 |
+inwoners = 13.439 |
+daotum inwoners = 30 april 2017 |
+dichthied = 195 |
 brettegraod = 53/13/0/N |
 lengtegraod = 5/40/0/E |
 verkeersaoder = A31, N31, spoorliende [[Liwwadden (stad)|Liwwadden]]-[[Harlingen (stad)|Harlingen]] |
@@ -18,7 +18,7 @@ netnummer = 058, 0517, 0518 |
 postkode = 9030-9045, 8816 |
 webstee = [http://www.menaldumadeel.nl www.menaldumadeel.nl] |
 }}
-'''Menaldumediel''' ([[Nederlaands|Nederlaans]]: ''Menaldumadeel'' {{Audio|457_Menaldumadeel.ogg|<small>uutspraoke</small>}}, [[Freesk|Fries]]: ''Menameradiel'') is een vroggere [[gemiente (bestuur)|gemiente]] in de [[perveensie]] [[Frieslaand]]. Op 1 meie 2014 had de gemiente 13.614 inwoners (bron: CBS) en het een oppervlakte van 70,03 [[vierkaante kilometer|km²]], waorvan 1,16 km² waeter.
+'''Menaldumediel''' ([[Nederlaands|Nederlaans]]: ''Menaldumadeel'' {{Audio|457_Menaldumadeel.ogg|<small>uutspraoke</small>}}, [[Freesk|Fries]]: ''Menameradiel'') is een vroggere [[gemiente (bestuur)|gemiente]] in de [[perveensie]] [[Frieslaand]]. Op 30 april 2017 had de gemiente 13.439 inwoners (bron: CBS) en het een oppervlakte van 70,03 [[vierkaante kilometer|km²]], waorvan 1,07 km² waeter.
 
 == Herindieling ==
 Op 10 oktober 2013 het de gemienteraod unaniem besleuten tot een herindieling per 1 jannewaori 2018. De gemiente gaot dan op in de ni'j te vormen gemiente [[Westergo]] mit Franeker as heufdplak. De ni'je gemiente zal omdebi'j de 47.000 inwoners hebben.
