*Empty MediaWiki Message*

--- a/Menaldumediel.mw
+++ b/Menaldumediel.mw
@@ -64,10 +64,10 @@ Naost disse officiële dörpen bin d'r in de vroggere gemiente de volgende [[buu
 * [[Klooster Anjum]] (''Kleaster Anjum'')
 * [[Ritsumeziel]] (''Ritsumasyl'')
 
+==Üütgånde verwysingen==
+{{commonscat|Menameradiel}}
 
 [[Ofbeelding:Menaldumadeel_5.68097E_53.19911N.jpg|thumb|left|280px|Satellietfoto mit anduding van gemientes]]
-
-{{commonscat|Menameradiel}}
 
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Vroggere gemiente in Frieslaand]]
