*Empty MediaWiki Message*

--- a/Montfoort.mw
+++ b/Montfoort.mw
@@ -3,7 +3,7 @@
 {{Gemeante |
 naam = Montfoort |
 bestaandsnaam vlagge = Flag of Montfoort.jpg |
-bestaandsnaam woapn =|
+bestaandsnaam woapn = Montfoort_wapen.svg|
 lokatie = LocatieMontfoort |
 proveensie = [[Utrecht (previnsie)|Utrech]] |
 heufdplaats = Montfoort |
@@ -51,7 +51,7 @@ In januari 2008 wodden der archeologies onderzook edoan an de Skoolstroate. Hier
 
 ==Galeri-je==
 <gallery>
-Ofbeelding:Montfoort_grachte.jpg|Grachte 
+Ofbeelding:Montfoortse_Vaart.JPG|De Montfoortse Vaarte
 Ofbeelding:Montfoort_kastele.jpg|Poorte van et Kasteel
 Ofbeelding:Montfoort_stroate.jpg|Stroate in Montfoort
 </gallery>
