*Empty MediaWiki Message*

--- a/Möppelt.mw
+++ b/Möppelt.mw
@@ -23,44 +23,45 @@ webstee = [http://www.meppel.nl www.meppel.nl] |
 == Kernen ==
 De gemiente Möppelt hef dartien officiële kernen, waorvan de stad Möppelt in de wiede umtrek 't grootste is.
 
-Antal inwoners per woonkern op 1 jannewaori 2004: 
-
-{| border="0"
-|-----
+{|
 |
-{| class="toccolours" style="margin: 0em 0em;"
-|Möppelt||26.380
-|-
-|[[Nijeveen]] ||ALIGN="right"|2660
-|-
-|[[Kolderveen]] ||ALIGN="right"|250
-|-
-|[[Kolderveense Bovenboer]] ||ALIGN="right"|140
-|-
-|[[Rogat]] ||ALIGN="right"|130
-|-
-|[[Nijeveense Bovenboer]] ||ALIGN="right"|120
-|}
-|}
-<small>Bron: CBS</small><br />
-
-Overige officiële kernen: 
+*[[Nijeveen]]
+*[[Kolderveen]]
+*[[Kolderveense Bovenboer]]
+*[[Rogat]]
+*[[Nijeveense Bovenboer]]
 *[[Broekhuzen (Drenthe)|Broekhuzen]]
+|
 *[[De Kolk]] (gedieltelijk)
 *[[Havelterbarg]] (gedieltelijk)
 *[[Havixhorst]]
 *[[Lindenhorst]]
 *[[Nijentap]] 
 *[[De Schiphorst]]
-
-Ter vergelieking: rond 1900 had Möppelt nog mar 10.000 inwoners.
-
-In [[2005]] bint ze begund mit de anleg van de ni'je [[woonwiek]] "[[Barggierslaanden]]", waor naor verwachting zo'n duzend woningen neerezet wördt. 't Masterplan "[[Nijeveense Laanden]]" richt hum op 't ontwikkeln van een ni'j woongebied tussen Möppelt en [[Nijeveen]] van 736 bunders. Nijeveense Laanden mut in [[2030]] plaatse bieden an 5.300 [[huus|woningen]].
+|}
 
 ==Zusterstad==
-Möppelt hef sunds jaoren een stedenbaand mit 't [[Tsjechië|Tsjechische]] [[Most (stad)|Most]].
+Möppelt hef sunds jaoren een stedenbaand mit 't [[Tsjechië|Tsjechische]] [[Most (stad)|Most]]. Daornaost hef Möppelt een stedenbaand mit 't Marokkaanse [[Al Hoceima]].
 
+==Fotogalerij==
+<gallery>
+Bestaand:Stadhuis, Meppel.jpg|Stadhuus van Möppelt
+Bestaand:Meppel, de Meppeler toren in straatzicht foto1 2011-05-21 11.58.JPG|Möppelder toren in straotzicht
+Bestaand:Molen de Weert.jpg|Meule De Weert
+Bestaand:DeVlijt-1.JPG|Meule De Vliet
+Bestaand:Drukkerijmuseum.jpg|Drukkerijmuseum Meppel
+Bestaand:BieB Mpl.jpg|Openbaore Biebeltheek
+Bestaand:Cultureel centrum.jpg|Cultureel Centrum
+Bestaand:Meppel Joodse begraafplaats (1).JPG|Joodse begraafplaatse
+Bestaand:Mallegatsgracht.jpg|Mallegatsgracht
+Bestaand:Meppel, haven.JPG|Westende en haven
+Bestaand:Historisch Centrum Meppel.JPG|Historisch Centrum Möppelt
+Bestaand:RIBW Meppel.jpg|RIBW Möppelt
+</gallery>
+
+== Uutgaonde verwiezing ==
 {{Commonscat|Meppel}}
+
 {{GemeeintenDrenthe}}
 
 {{DEFAULTSORT:Moppelt}}
