*Empty MediaWiki Message*

--- a/Lieste_van_presidenten_van_de_Vereanegde_Stoaten.mw
+++ b/Lieste_van_presidenten_van_de_Vereanegde_Stoaten.mw
@@ -418,7 +418,7 @@ Hieronder steet ne chronologiese '''lieste van [[president]]en van de [[Verienig
 | [[Nelson Rockefeller]]
 |- 
 | '''39'''
-| [[Bestaand:James E. Carter - portrait.gif|100px|Jimmy Carter]]
+| [[Bestaand:Unsuccessful_1980.jpg|100px|Jimmy Carter]]
 | [[Jimmy Carter]]
 | 20 januari 1977
 | 20 januari 1981
