*Empty MediaWiki Message*

--- a/Schiermonnikoog_(plak).mw
+++ b/Schiermonnikoog_(plak).mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:LekaosieSchiermonnikoog.png|thumb|275px|Lekaosie Schiermonnikoog]]
+[[File:Badweg 69 Sint-Egbertuskerk Schiermonnikoog.jpg|thumb|right|300px|Sint-Egbertuskapelle, Badweg 69]]
 Et dörp '''Schiermonnikoog''' ([[Eilaanders]]: ''Aisterbun'') is et ienigste dörp op et gelieknaemige [[Frieslaand|Friese]] [[waddenaailaanden|Waddeneilaand]] [[Schiermonnikoog]]. 
 
 Mit de ligging van 53°48' NB is et de noordelikste plak van [[Nederlaand]].
