*Empty MediaWiki Message*

--- a/Smallingerlaand.mw
+++ b/Smallingerlaand.mw
@@ -1,15 +1,15 @@
 {{Gemiente |
 naeme = Smallingerlaand |
-bestaansnaeme vlagge = Vlagge Smallingerlaand.jpg |
-bestaansnaeme waopen = Waopen Smallingerlaand.jpg |
+bestaansnaeme vlagge = Smallingerland_flag.svg |
+bestaansnaeme waopen = Smallingerland wapen.svg |
 lekaosie = LocatieSmallingerland |
 perveensie = [[Frieslaand]] |
 heufdplak = [[Drachten]] | 
 oppervlak = 126,17 |
-oppervlak laand = 118,24 |
-oppervlak waeter = 7,93 |
-inwoners = 55.505 |
-daotum inwoners = 1 mei 2006 |
+oppervlak laand = 117,31 |
+oppervlak waeter = 8,86 |
+inwoners = 55.938 |
+daotum inwoners = 1 jannewaori 2019 |
 dichthied = 471 |
 brettegraod = 53/6//N |
 lengtegraod = 6/6//E |
