--- a/Smallingerlaand.mw
+++ b/Smallingerlaand.mw
@@ -18,7 +18,7 @@ netnummer = 0512, 0566 |
 postkode = 8497, 9201 - 9223 |
 webstee = [http://www.smallingerland.nl www.smallingerland.nl] |
 }}
-'''Smallingerlaand''' ([[Nederlaands|Nederlaans]]: ''Smallingerland'' {{Audio|463_Smallingerland.ogg|<small>uutspraoke</small>}}, [[Freesk|Fries]]: ''Smellingerlân'') is een [[gemiente (bestuur)|gemiente]] in et oosten van de perveensie [[Frieslaand]]. De gemiente het per [[1 meie]] [[2014]] 55.505 inwoners (bron: CBS) en een oppervlakte van 126,17 [[vierkaante kilometer|km²]].
+'''Smallingerlaand''' ([[Nederlaands|Nederlaans]]: ''Smallingerland'' {{Audio|463_Smallingerland.ogg|<small>uutspraoke</small>}}, [[Freesk|Fries]]: ''Smellingerlân'') is een [[gemiente (bestuur)|gemiente]] in et oosten van de perveensie [[Frieslaand]]. De gemiente het per [[1 jannewaori]] [[2019]] 55.938 inwoners (bron: CBS) en een oppervlakte van 126,17 [[vierkaante kilometer|km²]] (waorvan 8,86 km² water).
 
 ==Naeme en geschiedenis==
 De gemiente Smallingerlaand, waorvan Drachten now de veurnaemste plak is, ontleent heur naeme an [[Smalle Ee]], een klein dörp in et zuudwesten van Drachten waor vrogger een klooster ston. Smalle Ee was tot omdebi'j [[1600]] et heufdplak van de grieteni'je, waornao Ooldege et heufdplak wodde. De plak Drachten is gruuid in de tied van de veenontginningen en wodde in [[1831]] et heufdplak.
